tdf#156814 Remove sheet name if range belongs to the same sheet (Solver)

When solver models are imported from XLSX, ranges come with sheet names even when they belong to the same sheet, which clutter the solver dialog.

This patch checks when this happens and remove sheet names when the solver model is imported.

Change-Id: I3994f1312667946aab330c734ff820e94673d018
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164610
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>