sc/qa/unit/ucalc_solver.cxx
@@ -34,19 +34,19 @@ std::vector<ModelConstraint> SolverTest::CreateConstraintsModelA()
     std::vector<ModelConstraint> aConstraints;
 
     ModelConstraint aConstr1;
-    aConstr1.aLeftStr = "C1:C10";
+    aConstr1.aLeftStr = "$C$1:$C$10";
     aConstr1.nOperator = CO_LESS_EQUAL;
     aConstr1.aRightStr = "100";
     aConstraints.push_back(aConstr1);
 
     ModelConstraint aConstr2;
-    aConstr2.aLeftStr = "F5";
+    aConstr2.aLeftStr = "$F$5";
     aConstr2.nOperator = CO_EQUAL;
     aConstr2.aRightStr = "500";
     aConstraints.push_back(aConstr2);
 
     ModelConstraint aConstr3;
-    aConstr3.aLeftStr = "D1:D5";
+    aConstr3.aLeftStr = "$D$1:$D$5";
     aConstr3.nOperator = CO_BINARY;
     aConstr3.aRightStr = "";
     aConstraints.push_back(aConstr3);
@@ -59,15 +59,15 @@ void SolverTest::TestConstraintsModelA(SolverSettings* pSettings)
 {
     std::vector<ModelConstraint> aConstraints = pSettings->GetConstraints();
 
-    CPPUNIT_ASSERT_EQUAL(OUString("C1:C10"), aConstraints[0].aLeftStr);
+    CPPUNIT_ASSERT_EQUAL(OUString("$C$1:$C$10"), aConstraints[0].aLeftStr);
     CPPUNIT_ASSERT_EQUAL(CO_LESS_EQUAL, aConstraints[0].nOperator);
     CPPUNIT_ASSERT_EQUAL(OUString("100"), aConstraints[0].aRightStr);
 
-    CPPUNIT_ASSERT_EQUAL(OUString("F5"), aConstraints[1].aLeftStr);
+    CPPUNIT_ASSERT_EQUAL(OUString("$F$5"), aConstraints[1].aLeftStr);
     CPPUNIT_ASSERT_EQUAL(CO_EQUAL, aConstraints[1].nOperator);
     CPPUNIT_ASSERT_EQUAL(OUString("500"), aConstraints[1].aRightStr);
 
-    CPPUNIT_ASSERT_EQUAL(OUString("D1:D5"), aConstraints[2].aLeftStr);
+    CPPUNIT_ASSERT_EQUAL(OUString("$D$1:$D$5"), aConstraints[2].aLeftStr);
     CPPUNIT_ASSERT_EQUAL(CO_BINARY, aConstraints[2].nOperator);
     CPPUNIT_ASSERT_EQUAL(OUString(""), aConstraints[2].aRightStr);
 }
@@ -93,19 +93,19 @@ CPPUNIT_TEST_FIXTURE(SolverTest, testSingleModel)
     CPPUNIT_ASSERT_EQUAL(sal_Int32(0), pSettings->GetParameter(SP_CONSTR_COUNT).toInt32());
 
     // Create a simple model
-    pSettings->SetParameter(SP_OBJ_CELL, OUString("A1"));
+    pSettings->SetParameter(SP_OBJ_CELL, OUString("$A$1"));
     pSettings->SetParameter(SP_OBJ_TYPE, OUString::number(OT_MINIMIZE));
     pSettings->SetParameter(SP_OBJ_VAL, OUString::number(0));
-    pSettings->SetParameter(SP_VAR_CELLS, OUString("D1:D5"));
+    pSettings->SetParameter(SP_VAR_CELLS, OUString("$D$1:$D$5"));
     std::vector<ModelConstraint> aConstraints = CreateConstraintsModelA();
     pSettings->SetConstraints(aConstraints);
 
     // Test if the model parameters were set
-    CPPUNIT_ASSERT_EQUAL(OUString("A1"), pSettings->GetParameter(SP_OBJ_CELL));
+    CPPUNIT_ASSERT_EQUAL(OUString("$A$1"), pSettings->GetParameter(SP_OBJ_CELL));
     CPPUNIT_ASSERT_EQUAL(static_cast<sal_Int32>(OT_MINIMIZE),
                          pSettings->GetParameter(SP_OBJ_TYPE).toInt32());
     CPPUNIT_ASSERT_EQUAL(OUString("0"), pSettings->GetParameter(SP_OBJ_VAL));
-    CPPUNIT_ASSERT_EQUAL(OUString("D1:D5"), pSettings->GetParameter(SP_VAR_CELLS));
+    CPPUNIT_ASSERT_EQUAL(OUString("$D$1:$D$5"), pSettings->GetParameter(SP_VAR_CELLS));
 
     // Test if the constraints were correctly set before saving
     CPPUNIT_ASSERT_EQUAL(sal_Int32(3), pSettings->GetParameter(SP_CONSTR_COUNT).toInt32());
@@ -120,11 +120,11 @@ CPPUNIT_TEST_FIXTURE(SolverTest, testSingleModel)
     CPPUNIT_ASSERT(pSettings);
 
     // Test if the model parameters remain set in the file
-    CPPUNIT_ASSERT_EQUAL(OUString("A1"), pSettings->GetParameter(SP_OBJ_CELL));
+    CPPUNIT_ASSERT_EQUAL(OUString("$A$1"), pSettings->GetParameter(SP_OBJ_CELL));
     CPPUNIT_ASSERT_EQUAL(static_cast<sal_Int32>(OT_MINIMIZE),
                          pSettings->GetParameter(SP_OBJ_TYPE).toInt32());
     CPPUNIT_ASSERT_EQUAL(OUString("0"), pSettings->GetParameter(SP_OBJ_VAL));
-    CPPUNIT_ASSERT_EQUAL(OUString("D1:D5"), pSettings->GetParameter(SP_VAR_CELLS));
+    CPPUNIT_ASSERT_EQUAL(OUString("$D$1:$D$5"), pSettings->GetParameter(SP_VAR_CELLS));
 
     // Test if the constraints remain correct after saving
     CPPUNIT_ASSERT_EQUAL(sal_Int32(3), pSettings->GetParameter(SP_CONSTR_COUNT).toInt32());
@@ -190,6 +190,30 @@ CPPUNIT_TEST_FIXTURE(SolverTest, tdf158735)
     CPPUNIT_ASSERT_EQUAL(OUString("0.00055"), pSettings->GetParameter(SP_STAGNATION_TOLERANCE));
     CPPUNIT_ASSERT_EQUAL(OUString("1"), pSettings->GetParameter(SP_RND_STARTING_POINT));
     CPPUNIT_ASSERT_EQUAL(OUString("80"), pSettings->GetParameter(SP_STAGNATION_LIMIT));
+}
+
+// Tests if range addresses from XLSX files that belong to the same sheet are not imported
+// with the sheet name, since it is unnecessary and clutters the dialog
+CPPUNIT_TEST_FIXTURE(SolverTest, tdf156814)
+{
+    createScDoc("xlsx/tdf156814.xlsx");
+    ScDocument* pDoc = getScDoc();
+
+    ScTable* pTable = pDoc->FetchTable(0);
+    std::shared_ptr<sc::SolverSettings> pSettings = pTable->GetSolverSettings();
+    CPPUNIT_ASSERT(pSettings);
+    // Ranges must not contain the sheet name
+    CPPUNIT_ASSERT_EQUAL(OUString("$F$2"), pSettings->GetParameter(SP_OBJ_CELL));
+    CPPUNIT_ASSERT_EQUAL(OUString("$A$2:$A$11,$C$2:$D$11"), pSettings->GetParameter(SP_VAR_CELLS));
+
+    // Check also the constraints (ranges must not contain sheet name either)
+    std::vector<ModelConstraint> aConstraints = pSettings->GetConstraints();
+    CPPUNIT_ASSERT_EQUAL(OUString("$H$2:$H$11"), aConstraints[0].aLeftStr);
+    CPPUNIT_ASSERT_EQUAL(OUString("$I$2:$I$11"), aConstraints[0].aRightStr);
+    CPPUNIT_ASSERT_EQUAL(OUString("$H$2:$H$11"), aConstraints[1].aLeftStr);
+    CPPUNIT_ASSERT_EQUAL(OUString("10"), aConstraints[1].aRightStr);
+    CPPUNIT_ASSERT_EQUAL(OUString("$I$2:$I$11"), aConstraints[2].aLeftStr);
+    CPPUNIT_ASSERT_EQUAL(OUString("0"), aConstraints[2].aRightStr);
 }
 
 CPPUNIT_PLUGIN_IMPLEMENT();
